--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@adminjs/sequelize": "^4.0.0",
     "@adminjs/upload": "^4.0.2",
     "adminjs": "^7.4.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
@@ -19,6 +20,7 @@
     "sequelize": ">=6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
