--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@adminjs/express": "^6.1.0",
     "@adminjs/sequelize": "^4.0.0",
     "@adminjs/upload": "^4.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "adminjs": "^7.4.1",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "latest",
     "sequelize": ">=6"
   },
