--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint \"src\"",
-    "dev": "dotenv -c '.env' -- node dist/server"
+    "dev": "dotenv -c '.env' -- tsx watch src/server.ts"
   },
   "dependencies": {
     "@adminjs/express": "^6.1.0",
@@ -40,6 +40,7 @@
     "prettier": "^3.1.0",
     "sequelize-cli": "^6.6.2",
     "tslib": "^2.5.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.0.4"
   },
   "name": "adminjs-test"
