--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,13 @@
 {
   "compilerOptions": {
-    "jsx": "react",
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "target": "ES2021",
-    "declaration": false,
-    "removeComments": true,
-    "emitDecoratorMetadata": false,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "allowJs": true,
-    "sourceMap": false,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
+    "target": "ES2022",
+    "lib": ["ES2023"],
+    "module": "Node16",
     "esModuleInterop": true,
-  },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "**/src/**/*"
-  ]
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true
+  }
 }
